[project]
name = "atumm-extensions"
version = "0.1.0"
description = "3rd-party extensions"
authors = [
    {name = "Omars", email = "omar@atumm.org"},
]
dependencies = [
    "pydantic>=2.3.0",
    "injector>=0.21.0",
    "motor>=3.3.1",
    "pyseto>=1.7.4",
    "PyJWT>=2.8.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
